# Impact-Vector

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main  main.cpp
src/: ECS.cpp  ECS.h  Game.cpp  Game.h  Registry.cpp  Registry.h
src/Components/: Collider.h  Components.h  Input.h  Physics.h  Position.h  Sprite.h  Velocity.h
src/Systems/: Collision.cpp  Input.cpp  Movement.cpp  Physics.cpp  Render.cpp
